# roombapy-prime

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ADER_UPDATE_DRAFT_2026-07-11.md  API_REFERENCE.md  DATA_PRIVACY.md  DEVELOPMENT_NOTES.md  PRIME_APP_GAP_ANALYSIS_2026-07-11.md  ROOMBAPY_COMPARISON.md  base_roomba_config_REFERENCE.json
docs/archive/: FINDINGS_2026-07-11.md  HA_ROOMBA_PLUS_CROSSREF.md
docs/internal/: DEVELOPMENT_NOTES.md  PRIME_APP_GAP_ANALYSIS_2026-07-11.md  ROOMBAPY_COMPARISON.md  WRITE_PATH_TEST_STATUS.md
examples/: basic_usage.py  favorites_and_history.py  mission_control.py
release-notes/: v0.1.11a.md  v0.1.11a1.md  v0.1.11a10.md  v0.1.11a11.md  v0.1.11a12.md  v0.1.11a13.md  v0.1.11a14.md  v0.1.11a15.md  v0.1.11a16.md  v0.1.11a17.md  v0.1.11a18.md  v0.1.11a19.md  v0.1.11a2.md  v0.1.11a20.md  v0.1.11a21.md  v0.1.11a3.md  v0.1.11a4.md  v0.1.11a5.md  v0.1.11a6.md  v0.1.11a7.md  v0.1.11a8.md  v0.1.11a9.md
roombapy_prime/: __init__.py  auth.py  aws_sigv4.py  diagnostics.py  models.py  mqtt_client.py  prime_factory.py  prime_robot.py  rest_client.py  verify_favorite_write.py  verify_map_edit.py  verify_mission_commands.py  verify_mission_timeline.py  verify_named_shadows.py  verify_region_commands.py  verify_region_commands_session.py  verify_schedule_write.py  verify_settings_write.py  verify_virtual_wall_write.py
roombapy_prime/models/: __init__.py  enums_common.py  favorites.py  geometry.py  livemap.py  map_bundle.py  map_editing.py  mission_control.py  mission_history.py  robot_info.py  schedules_dnd.py
roombapy_prime/tests/: conftest.py  test_auth.py  test_aws_sigv4.py  test_diagnostics.py  test_init.py  test_models.py  test_mqtt_client.py  test_prime_factory.py  test_prime_robot.py  test_rest_client.py  test_verify_favorite_write.py  test_verify_map_edit.py  test_verify_mission_commands.py  test_verify_mission_timeline.py  test_verify_region_commands.py  test_verify_region_commands_session.py  test_verify_schedule_write.py  test_verify_settings_write.py  test_verify_virtual_wall_write.py
roombapy_prime/tests/fixtures/: README.md  login_response_ephemeral.json  login_response_smart_tier.json  shadow_get_classic_ephemeral.json  shadow_get_classic_smart_tier.json  shadow_get_rw_settings_smart_tier.json  shadow_update_accepted.json
scripts/: check_version_badge.py
